--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "private": true,
   "homepage": "https://taylorsam209.github.io/calendar-scheduler/",
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "dotenv": "^5.0.1",
     "express": "^4.16.2",
     "material-ui": "^0.20.0",
     "moment": "^2.21.0",
-    "react": "^16.2.0",
+    "react": "^16.13.1",
     "react-big-calendar": "^0.18.0",
-    "react-dom": "^16.2.0",
+    "react-dom": "^16.13.1",
     "sweetalert": "^2.1.0"
   },
   "devDependencies": {
